--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.0.2"
-  }
+  },
+  "files": [
+    "lib/**/*"
+  ]
 }
